--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+------ 0.1.2 -------
+- removed hard-coded resolver for gestalt-framework libraries 
+
 ------ 0.1.1 -------
 - Initial public release
